structured and styled the footer across all pages

--- a/index.html
+++ b/index.html
@@ -35,5 +35,41 @@
             </ul>
         </div>
     </nav>
+    <main></main>
+    <footer class="footer">
+        <section class="footer-containers">
+            <p class="footer-containers__headings">Contact</p>
+            <p class="footer-containers__info">EMAIL</p>
+            <a href="mailto:info@travelsite.com" class="footer-containers-store__info">info@travelsite.com</a>
+        </section>
+        <section class="footer-hours__container">
+            <p class="footer-containers__headings">Hours</p>
+            <div>
+                <div class="jj">
+                    <p class="footer-containers__info">MONDAY - FRIDAY</p>
+                <p class="footer-containers-store__info">9:00 AM - 5:00 PM</p>
+                </div>
+                <div>
+                    <p class="footer-containers__info">SATURDAY</p>
+                <p class="footer-containers-store__info">10:00 AM - 4:00 PM</p>
+                </div>
+                <div>
+                    <p class="footer-containers__info">SUNDAY</p>
+                <p class="footer-containers-store__info">Closed</p>
+                </div>
+                
+            </div>
+        </section>
+        <section class="footer-social__container">
+            <p class="footer-containers__headings">Social</p>
+            <section class="footer-social__container-icons">
+                <a href="https://www.instagram.com"><img src="/Assets/Icons/icon-instagram.png"
+                        alt="Instagram Icon"></a>
+                <a href="https://www.facebook.com"><img src="/Assets/Icons/icon-facebook.png" alt="Facebook Icon"></a>
+                <a href="https://www.twitter.com"><img src="/Assets/Icons/icon-twitter.png" alt="Twitter Icon"></a>
+            </section>
+        </section>
+    </footer>
 </body>
+
 </html>
