structured hero section and updated the nav bar

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/global.css">
+    <link rel="stylesheet" href="/css/main.css">
     <title>Travel Site</title>
 </head>
 
@@ -14,13 +14,13 @@
 
     <nav class="navigation">
         <div class="navigation-left">
-            <a href="/index.html">
+            <a href="/">
                 <h3>Travel Site</h3>
             </a>
         </div>
         <div class="navigation-right">
             <ul class="navigation-unordered-list">
-                <a href="/index.html">
+                <a href="/">
                     <li class="navigation-unordered-list__main">Home</li>
                 </a>
                 <a href="/pages/hawaii.html">
@@ -35,7 +35,23 @@
             </ul>
         </div>
     </nav>
-    <main></main>
+    <main class="main">
+        <section class="main-hero-section">
+            <div class="main-hero-section__left">
+                <h1 class="main-hero-section__heading">Travelling Comes With
+                    Endless Discoveries</h1>
+                <p class="main-hero-section__paragraph">Don’t let your dreams be just dreams. Experience the world by
+                    booking a
+                    vacation with us now.</p>
+                <a href="#" class="main-hero-section__button"> Get started</a>
+            </div>
+
+            <img src="/Assets/Images/hero.png" alt="hero image">
+        </section>
+        <section class="main-recomendations-section">
+
+        </section>
+    </main>
     <footer class="footer">
         <section class="footer-containers">
             <p class="footer-containers__headings">Contact</p>
@@ -47,17 +63,17 @@
             <div>
                 <div class="jj">
                     <p class="footer-containers__info">MONDAY - FRIDAY</p>
-                <p class="footer-containers-store__info">9:00 AM - 5:00 PM</p>
+                    <p class="footer-containers-store__info">9:00 AM - 5:00 PM</p>
                 </div>
                 <div>
                     <p class="footer-containers__info">SATURDAY</p>
-                <p class="footer-containers-store__info">10:00 AM - 4:00 PM</p>
+                    <p class="footer-containers-store__info">10:00 AM - 4:00 PM</p>
                 </div>
                 <div>
                     <p class="footer-containers__info">SUNDAY</p>
-                <p class="footer-containers-store__info">Closed</p>
+                    <p class="footer-containers-store__info">Closed</p>
                 </div>
-                
+
             </div>
         </section>
         <section class="footer-social__container">
