structured and styled the recomendations section

--- a/index.html
+++ b/index.html
@@ -45,12 +45,28 @@
                     vacation with us now.</p>
                 <a href="#" class="main-hero-section__button"> Get started</a>
             </div>
-
             <img src="/Assets/Images/hero.png" alt="hero image">
         </section>
-        <section class="main-recomendations-section">
-
-        </section>
+        <div class="main-recomendations">
+            <h1>Recommendations</h1>
+            <div class="main-recomendations-section">
+                <div class="main-recomendations-section__cards">
+                    <div class="main-recomendations__hawaii">
+                       <a href="/pages/hawaii.html"><img src="/Assets/Images/hawaii.jpg" alt="Hawaii image"></a> 
+                    </div>
+                </div>
+                <div class="main-recomendations-section__cards">
+                    <div class="main-recomendations__iceland">
+                        <a href="/pages/iceland.html"><img src="/Assets/Images/iceland.jpg" alt="Iceland image"></a>
+                    </div>
+                </div>
+                <div class="main-recomendations-section__cards">
+                    <div class="main-recomendations__greece">
+                        <a href="/pages/greece.html"><img src="/Assets/Images/greece.jpg" alt="Greece image"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <footer class="footer">
         <section class="footer-containers">
