updated recomendations section and hero section

--- a/index.html
+++ b/index.html
@@ -52,16 +52,19 @@
             <div class="main-recomendations-section">
                 <div class="main-recomendations-section__cards">
                     <div class="main-recomendations__hawaii">
+                        <p>Hawaii</p>
                        <a href="/pages/hawaii.html"><img src="/Assets/Images/hawaii.jpg" alt="Hawaii image"></a> 
                     </div>
                 </div>
                 <div class="main-recomendations-section__cards">
                     <div class="main-recomendations__iceland">
+                        <p>Iceland</p>
                         <a href="/pages/iceland.html"><img src="/Assets/Images/iceland.jpg" alt="Iceland image"></a>
                     </div>
                 </div>
                 <div class="main-recomendations-section__cards">
                     <div class="main-recomendations__greece">
+                        <p>Greece</p>
                         <a href="/pages/greece.html"><img src="/Assets/Images/greece.jpg" alt="Greece image"></a>
                     </div>
                 </div>
