--- a/pages/hawaii.html
+++ b/pages/hawaii.html
@@ -32,7 +32,9 @@
             </ul>
         </div>
     </nav>
-    <main></main>
+    <main class="hawaii-main">
+        
+    </main>
     <footer class="footer">
         <section class="footer-containers">
             <p class="footer-containers__headings">Contact</p>
