--- a/pages/iceland.html
+++ b/pages/iceland.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="/css/destinations.css">
     <title>Travel Site - Iceland</title>
 </head>
+
 <body>
     <nav class="navigation">
         <div class="navigation-left">
@@ -32,7 +34,7 @@
             </ul>
         </div>
     </nav>
-    <main></main>
+    <main class="iceland-main"></main>
     <footer class="footer">
         <section class="footer-containers">
             <p class="footer-containers__headings">Contact</p>
@@ -54,17 +56,19 @@
                     <p class="footer-containers__info">SUNDAY</p>
                     <p class="footer-containers-store__info">Closed</p>
                 </div>
-    
+
             </div>
         </section>
         <section class="footer-social__container">
             <p class="footer-containers__headings">Social</p>
             <section class="footer-social__container-icons">
-                <a href="https://www.instagram.com"><img src="/Assets/Icons/icon-instagram.png" alt="Instagram Icon"></a>
+                <a href="https://www.instagram.com"><img src="/Assets/Icons/icon-instagram.png"
+                        alt="Instagram Icon"></a>
                 <a href="https://www.facebook.com"><img src="/Assets/Icons/icon-facebook.png" alt="Facebook Icon"></a>
                 <a href="https://www.twitter.com"><img src="/Assets/Icons/icon-twitter.png" alt="Twitter Icon"></a>
             </section>
         </section>
     </footer>
 </body>
+
 </html>
