--- a/pages/greece.html
+++ b/pages/greece.html
@@ -32,7 +32,7 @@
             </ul>
         </div>
     </nav>
-    <main></main>
+    <main class="greece-main"></main>
     <footer class="footer">
         <section class="footer-containers">
             <p class="footer-containers__headings">Contact</p>
