structured and styled the destination pages

--- a/pages/greece.html
+++ b/pages/greece.html
@@ -32,7 +32,38 @@
             </ul>
         </div>
     </nav>
-    <main class="greece-main"></main>
+    <main class="greece-main">
+        <section class="main-itinerary__card">
+            <h1>Greece</h1>
+            <div class="cards-continer">
+                <ul class="cards-continer__list">
+                    <li class="container-list-day">Friday</li>
+                    <li class="container-list-day__activities">Breakfast</li>
+                    <li class="container-list-day__activities">Lunch</li>
+                    <li class="container-list-day__activities">Dinner</li>
+                    <li class="container-list-day__activities">Smorkeling</li>
+                </ul>
+            </div>
+            <div class="cards-continer">
+                <ul class="cards-continer__list">
+                    <li class="container-list-day">Saturday</li>
+                    <li class="container-list-day__activities">Breakfast</li>
+                    <li class="container-list-day__activities">Lunch</li>
+                    <li class="container-list-day__activities">Dinner</li>
+                    <li class="container-list-day__activities">Smorkeling</li>
+                </ul>
+            </div>
+            <div class="cards-continer">
+                <ul class="cards-continer__list">
+                    <li class="container-list-day">Sunday</li>
+                    <li class="container-list-day__activities">Breakfast</li>
+                    <li class="container-list-day__activities">Lunch</li>
+                    <li class="container-list-day__activities">Dinner</li>
+                    <li class="container-list-day__activities">Smorkeling</li>
+                </ul>
+            </div>
+        </section>
+    </main>
     <footer class="footer">
         <section class="footer-containers">
             <p class="footer-containers__headings">Contact</p>
