--- a/pages/hawaii.html
+++ b/pages/hawaii.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,10 +9,11 @@
     <link rel="stylesheet" href="/css/destinations.css">
     <title>Travel Site - Hawaii</title>
 </head>
+
 <body>
     <nav class="navigation">
         <div class="navigation-left">
-            <a href="/index.html">
+            <a href="/">
                 <h3>Travel Site</h3>
             </a>
         </div>
@@ -33,7 +35,36 @@
         </div>
     </nav>
     <main class="hawaii-main">
-        
+        <section class="main-itinerary__card">
+            <h1>Hawaii</h1>
+            <div class="cards-continer">
+                <ul class="cards-continer__list">
+                    <li class="container-list-day">Friday</li>
+                    <li class="container-list-day__activities">Breakfast</li>
+                    <li class="container-list-day__activities">Lunch</li>
+                    <li class="container-list-day__activities">Dinner</li>
+                    <li class="container-list-day__activities">Smorkeling</li>
+                </ul>
+            </div>
+            <div class="cards-continer">
+                <ul class="cards-continer__list">
+                    <li class="container-list-day">Saturday</li>
+                    <li class="container-list-day__activities">Breakfast</li>
+                    <li class="container-list-day__activities">Lunch</li>
+                    <li class="container-list-day__activities">Dinner</li>
+                    <li class="container-list-day__activities">Smorkeling</li>
+                </ul>
+            </div>
+            <div class="cards-continer">
+                <ul class="cards-continer__list">
+                    <li class="container-list-day">Sunday</li>
+                    <li class="container-list-day__activities">Breakfast</li>
+                    <li class="container-list-day__activities">Lunch</li>
+                    <li class="container-list-day__activities">Dinner</li>
+                    <li class="container-list-day__activities">Smorkeling</li>
+                </ul>
+            </div>
+        </section>
     </main>
     <footer class="footer">
         <section class="footer-containers">
@@ -56,17 +87,19 @@
                     <p class="footer-containers__info">SUNDAY</p>
                     <p class="footer-containers-store__info">Closed</p>
                 </div>
-    
+
             </div>
         </section>
         <section class="footer-social__container">
             <p class="footer-containers__headings">Social</p>
             <section class="footer-social__container-icons">
-                <a href="https://www.instagram.com"><img src="/Assets/Icons/icon-instagram.png" alt="Instagram Icon"></a>
+                <a href="https://www.instagram.com"><img src="/Assets/Icons/icon-instagram.png"
+                        alt="Instagram Icon"></a>
                 <a href="https://www.facebook.com"><img src="/Assets/Icons/icon-facebook.png" alt="Facebook Icon"></a>
                 <a href="https://www.twitter.com"><img src="/Assets/Icons/icon-twitter.png" alt="Twitter Icon"></a>
             </section>
         </section>
     </footer>
 </body>
+
 </html>
