--- a/pages/iceland.html
+++ b/pages/iceland.html
@@ -34,7 +34,36 @@
             </ul>
         </div>
     </nav>
-    <main class="iceland-main"></main>
+    <main class="iceland-main"><section class="main-itinerary__card">
+        <h1>Iceland</h1>
+        <div class="cards-continer">
+            <ul class="cards-continer__list">
+                <li class="container-list-day">Friday</li>
+                <li class="container-list-day__activities">Breakfast</li>
+                <li class="container-list-day__activities">Lunch</li>
+                <li class="container-list-day__activities">Dinner</li>
+                <li class="container-list-day__activities">Smorkeling</li>
+            </ul>
+        </div>
+        <div class="cards-continer">
+            <ul class="cards-continer__list">
+                <li class="container-list-day">Saturday</li>
+                <li class="container-list-day__activities">Breakfast</li>
+                <li class="container-list-day__activities">Lunch</li>
+                <li class="container-list-day__activities">Dinner</li>
+                <li class="container-list-day__activities">Smorkeling</li>
+            </ul>
+        </div>
+        <div class="cards-continer">
+            <ul class="cards-continer__list">
+                <li class="container-list-day">Sunday</li>
+                <li class="container-list-day__activities">Breakfast</li>
+                <li class="container-list-day__activities">Lunch</li>
+                <li class="container-list-day__activities">Dinner</li>
+                <li class="container-list-day__activities">Smorkeling</li>
+            </ul>
+        </div>
+    </section></main>
     <footer class="footer">
         <section class="footer-containers">
             <p class="footer-containers__headings">Contact</p>
